--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "expo": "~51.0.6",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.11.0",
